<resources>
    <string name="app_name">UniversalAppNotifier</string>
    <string name="calendar_events">Calendar Events</string>
    <string name="add_email">Add Email</string>
    <string name="created_by">Created by: %1$s</string>
    <string name="coming_from">Coming from\n%1$s</string>
    <string name="start">Start:\n%1$s</string>
    <string name="end">End:\n%1$s</string>
    <string name="outlook_calendar">Outlook Calendar</string>
    <string name="outlook_calendar_icon">Outlook Calendar Icon</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="plus_add_email">+ Add Email</string>
    <string name="all">All</string>
    <string name="google">Google</string>
    <string name="outlook">Outlook</string>
    <string name="sign_in_image">sign in image</string>
    <string name="all_calendars_in_one_view">All Calendars In One View</string>
    <string name="added_email_ids">Added Email Ids</string>
    <string name="select_email_type">Select\nEmail Type</string>
    <string name="which_email_select">Which Email Type Would You Like To Select?</string>
    <string name="see_events_for_today">SEE EVENTS FOR TODAY</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_n_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="add_title">Add title</string>
    <string name="to">to</string>
    <string name="time_zone">Time Zone</string>
    <string name="location">Location</string>
    <string name="type_description_here">Type description here</string>
    <string name="save">Save</string>
    <string name="summary">Summary</string>
</resources>