<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addEmailId.AddEmailIdActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"/>

    <TextView
        style="@style/MediumBoldText"
        android:id="@+id/tv_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:text="@string/select_email_type"
        android:textSize="18sp"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/img_back"/>

    <TextView
        style="@style/SmallRegularText"
        android:id="@+id/tv_sub_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:text="@string/which_email_select"
        android:textSize="14sp"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ll_outlook_calendar_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.475"
            android:background="@drawable/square_rounded_corners"
            android:backgroundTint="@color/sky_blue_1"
            android:padding="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/outlook_calendar_icon"
                android:src="@drawable/ic_outlook_calendar_logo" />

            <TextView
                style="@style/SmallRegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/outlook_calendar" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"/>

        <LinearLayout
            android:id="@+id/ll_google_calendar_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.475"
            android:background="@drawable/square_rounded_corners"
            android:backgroundTint="@color/sky_blue_1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/optionImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/outlook_calendar_icon"
                android:src="@drawable/ic_google_calendar_logo" />

            <TextView
                android:id="@+id/optionText"
                style="@style/SmallRegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_calendar"
                android:lines="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>