<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.googleCalEventsDetail.GoogleCalendarEventDetailsActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_text_input_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/summary"
                style="@style/TextInputEditTextStyle"
                android:backgroundTint="@color/sky_blue_1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_event_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_slight_rounded_corners"
                    android:backgroundTint="@color/sky_blue_1"
                    android:paddingVertical="16dp"
                    android:layout_weight="0.95"
                    tools:text="Apr 10, 2024"
                    style="@style/SmallRegularText"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"/>
                <TextView
                    android:id="@+id/tv_event_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_slight_rounded_corners"
                    android:backgroundTint="@color/sky_blue_1"
                    android:paddingVertical="16dp"
                    android:layout_weight="0.95"
                    tools:text="5:00pm"
                    style="@style/SmallRegularText"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_slight_rounded_corners"
                android:backgroundTint="@color/white"
                android:paddingVertical="4dp"
                android:text="@string/to"
                style="@style/SmallRegularText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_event_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_slight_rounded_corners"
                    android:backgroundTint="@color/sky_blue_1"
                    android:paddingVertical="16dp"
                    android:layout_weight="0.95"
                    tools:text="Apr 10, 2024"
                    style="@style/SmallRegularText"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"/>
                <TextView
                    android:id="@+id/tv_event_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_slight_rounded_corners"
                    android:backgroundTint="@color/sky_blue_1"
                    android:paddingVertical="16dp"
                    android:layout_weight="0.95"
                    tools:text="5:00pm"
                    style="@style/SmallRegularText"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_time_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/square_slight_rounded_corners"
                android:backgroundTint="@color/sky_blue_1"
                android:paddingVertical="16dp"
                android:text="@string/time_zone"
                style="@style/SmallRegularText"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_text_input_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                style="@style/TextInputEditTextStyle"
                android:backgroundTint="@color/sky_blue_1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/event_busy_free_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/square_slight_rounded_corners"
                android:backgroundTint="@color/sky_blue_1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="16dp">
                <Spinner
                    android:id="@+id/spinner_busy_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_busy_free_avail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:background="@drawable/square_slight_rounded_corners"
                android:backgroundTint="@color/sky_blue_1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="16dp">
                <Spinner
                    android:id="@+id/spinner_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_guests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/email_list_item"
            tools:itemCount="10"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <EditText
            android:id="@+id/edt_text_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lines="11"
            android:background="@drawable/square_slight_rounded_corners"
            android:gravity="top"
            android:padding="10dp"
            android:backgroundTint="@color/sky_blue_1"
            android:hint="@string/type_description_here"/>

        <Button
            android:id="@+id/btn_save_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_slight_rounded_corners"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:text="@string/save"/>

    </LinearLayout>
</ScrollView>